# Efficient-and-Accurate-Template-based-Reconstruction-of-Deformable-Surfaces

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  Extractor.cc  Extractor.h  MapViewer.cc  MapViewer.h  MeshMap.cc  MeshMap.h  Mesh_Visualizer.cc  Mesh_Visualizer.h  Optimizer.h  OptimizerDistanceOnly.h  Tracking.cc  Tracking.h  config.yaml  ham.cc  hamlyn.cc  hamlyn_f7.cc  helper.cc  helper.h  objReader.cc
app/Phantom5/: config.yaml  hamlyn_f5.cc
app/Phantom7/: config.yaml  hamlyn_f7.cc
app/colon_1/: config.yaml  main.cc
app/colon_2/: config.yaml  main.cc
app/colon_3/: config.yaml  main.cc
app/p_sft_S1_real/: S1_real.cc  config.yaml  real.cc
app/p_sft_S2_real/: config.yaml  real.cc
app/p_sft_S3_real/: config.yaml  real.cc
app/p_sft_S4_real/: config.yaml  real.cc
app/p_sft_S5_real/: config.yaml  real.cc
app/p_sft_S6_real/: config.yaml  real.cc
app/p_sft_S7_real/: config.yaml  real.cc
app/p_sft_S8_real/: config.yaml  real.cc
app/p_sft_S9_real/: config.yaml  real.cc
src/: CMakeLists.txt  Extractor.cc  MeshMap.cc  MeshMap.h  Mesh_Visualizer.cc  Mesh_Visualizer.h  Optimizer.h  OptimizerDistanceOnly.h  OptimizerWithoutMiddlePoint.h  System.cc  System.h  Tracking.cc  Tracking.h
src/GT_compare/: CMakeLists.txt  GroundTruth_compare.cc  GroundTruth_compare.h  HamlynGT.cc  HamlynGT.h  SfTGT.cc  SfTGT.h
src/data/: CMakeLists.txt  Extractor.cc  Extractor.h
src/modules/: CMakeLists.txt  MeshMap.cc  MeshMap.h  System.cc  System.h  Tracking.cc  Tracking.h
src/modules/GT_compare/: CMakeLists.txt  ColonGT.cc  ColonGT.h  GroundTruth_compare.cc  GroundTruth_compare.h  HamlynGT.cc  HamlynGT.h  SfTGT.cc  SfTGT.h
src/modules/data/: CMakeLists.txt  Extractor.cc  Extractor.h  database.cc  database.h
src/modules/optimize/: CMakeLists.txt  Optimizer.h  OptimizerDistanceOnly.h  OptimizerVB.h  OptimizerWithoutMiddlePoint.h
src/optimize/: Optimizer.h  OptimizerDistanceOnly.h  OptimizerWithoutMiddlePoint.h
src/util/: CMakeLists.txt  utils.h
src/viewer/: CMakeLists.txt  MeshDrawer.cc  MeshDrawer.h  Mesh_Visualizer.cc  Mesh_Visualizer.h  Viewer.cc  Viewer.h
test/: CMakeLists.txt  MeshViewer.cc  MeshViewer.h  view.cc
test/p_sft_S1_real/: config.yaml  real.cc
trash/: MapViewer.cc  MeshDrawer.cc  MeshDrawer.h  Viewer.cc  Viewer.h  hamlyn.cc  helper.cc  objReader.cc  objReader.h  test.cc  tmpGT
trash2/: CMakeLists.txt  MeshMap.cc  MeshMap.h  System.cc  System.h  Tracking.cc  Tracking.h
trash2/data/: Extractor.cc  Extractor.h  database.cc  database.h
trash2/optimize/: Optimizer.h
trash2/viewer/: CMakeLists.txt  MeshDrawer.cc  MeshDrawer.h  MeshViewer.cc  MeshViewer.h  view.cc
